# CellRegPy

./: LICENSE  README.md  environment.yml  pyproject.toml
cellregpy/: __init__.py  cellregpy.py  cellregpy_old.py  gui_check_alignment.py  gui_curate_results_v11_sessionplot_fix.py  gui_run_pipeline.py  plotting.py
cellregpy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
cellregpy/dep/: cellregpy_old.py  cellregpy_old1.py
cellregpy/depv2/: cellregpy.py  cellregpy0.py  cellregpy_old00.py  cellregpy_old_old.py  cellregpy_v2.py  viz_cellreg_alignment_gui_v12_async_debug.py  viz_cellreg_alignment_gui_v13_trace_click.py  viz_cellreg_alignment_gui_v3.py  viz_cellreg_alignment_gui_v6.py  viz_cellreg_alignment_gui_v8.py  viz_cellreg_alignment_gui_v9.py
notebooks/: demo_validate_alignment.ipynb  demo_validate_alignment_DUAL_CONCISE.ipynb  demo_validate_alignment_DUAL_CONCISE_FIXED.ipynb  demo_validate_alignment_fullrun_autosimple_qc.ipynb
notebooks/dep/: demo_validate_alignment_fullrun.ipynb
tests/: cellregpy_fullrun.py  validate_alignment_script.py
