[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cellregpy"
version = "0.1.0"
description = "Cross-session cell registration for calcium imaging – a Python port of CellReg."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "John Stout"},
]
keywords = ["neuroscience", "calcium-imaging", "cell-registration", "suite2p", "cellreg"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "numpy>=1.22",
    "scipy>=1.8",
    "scikit-image>=0.19",
    "matplotlib>=3.5",
    "pandas>=1.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "jupyter>=1.0",
    "notebook>=6.0",
]

[project.urls]
Homepage = "https://github.com/JohnStout/CellRegPy"
Repository = "https://github.com/JohnStout/CellRegPy"
Issues = "https://github.com/JohnStout/CellRegPy/issues"

[tool.setuptools.packages.find]
include = ["cellregpy*"]
